fix wrap

--- a/styles/pages/home/services.scss
+++ b/styles/pages/home/services.scss
@@ -78,7 +78,7 @@
       width: 31.552rem;
 
       @include media("<phone") {
-        width: 12.352rem;
+        width: 12.52rem;
       }
     }
   }
